--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Uses SfLib.v from Software Foundations book (www.cis.upenn.edu/~bcpierce/sf/Logic.html).
+Uses SfLib.v from Software Foundations book (www.cis.upenn.edu/~bcpierce/sf/SfLib.html).
