--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Uses SfLib.v from Software Foundations book (www.cis.upenn.edu/~bcpierce/sf/SfLib.html).
+
+Uses CompCert-Toolkit (https://github.com/jtristan/CompCert-Toolkit).
